# payment/api/gateway/v1/gateway_grpc_proxy.pb.go
@@ -1,0 +1,56 @@
+// Code generated by protoc-gen-go-grpc-proxy. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc-proxy v1.2.0
+// - protoc             (unknown)
+// source: payment/api/gateway/v1/gateway.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+var _ PaymentGatewayServiceServer = (*paymentGatewayServiceClientProxy)(nil)
+
+const GrpcOperationPaymentGatewayServiceGetPaymentMethod = "/payment.api.gateway.v1.PaymentGatewayService/GetPaymentMethod"
+
+var _ StripePaymentGatewayServiceServer = (*stripePaymentGatewayServiceClientProxy)(nil)
+
+const GrpcOperationStripePaymentGatewayServiceCreateStripePaymentIntent = "/payment.api.gateway.v1.StripePaymentGatewayService/CreateStripePaymentIntent"
+const GrpcOperationStripePaymentGatewayServiceStripeWebhook = "/payment.api.gateway.v1.StripePaymentGatewayService/StripeWebhook"
+
+// paymentGatewayServiceClientProxy is the proxy to turn PaymentGatewayService client to server interface.
+type paymentGatewayServiceClientProxy struct {
+	cc PaymentGatewayServiceClient
+}
+
+func NewPaymentGatewayServiceClientProxy(cc PaymentGatewayServiceClient) PaymentGatewayServiceServer {
+	return &paymentGatewayServiceClientProxy{cc}
+}
+
+func (c *paymentGatewayServiceClientProxy) GetPaymentMethod(ctx context.Context, in *GetPaymentMethodRequest) (*GetPaymentMethodReply, error) {
+	return c.cc.GetPaymentMethod(ctx, in)
+}
+
+// stripePaymentGatewayServiceClientProxy is the proxy to turn StripePaymentGatewayService client to server interface.
+type stripePaymentGatewayServiceClientProxy struct {
+	cc StripePaymentGatewayServiceClient
+}
+
+func NewStripePaymentGatewayServiceClientProxy(cc StripePaymentGatewayServiceClient) StripePaymentGatewayServiceServer {
+	return &stripePaymentGatewayServiceClientProxy{cc}
+}
+
+func (c *stripePaymentGatewayServiceClientProxy) CreateStripePaymentIntent(ctx context.Context, in *CreateStripePaymentIntentRequest) (*CreateStripePaymentIntentReply, error) {
+	return c.cc.CreateStripePaymentIntent(ctx, in)
+}
+func (c *stripePaymentGatewayServiceClientProxy) StripeWebhook(ctx context.Context, in *emptypb.Empty) (*StripeWebhookReply, error) {
+	return c.cc.StripeWebhook(ctx, in)
+}
