# payment/private/service/openapi/api.swagger.json
@@ -1,17 +1,143 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "payment/event/v1/event.proto",
+    "title": "payment/api/gateway/v1/gateway.proto",
     "version": "version not set"
   },
+  "tags": [
+    {
+      "name": "PaymentGatewayService"
+    },
+    {
+      "name": "StripePaymentGatewayService"
+    }
+  ],
   "consumes": [
     "application/json"
   ],
   "produces": [
     "application/json"
   ],
-  "paths": {},
+  "paths": {
+    "/v1/payment/methods": {
+      "get": {
+        "operationId": "PaymentGatewayService_GetPaymentMethod",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetPaymentMethodReply"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "orderId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "isTest",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "tags": [
+          "PaymentGatewayService"
+        ]
+      }
+    },
+    "/v1/payment/stripe/intent": {
+      "post": {
+        "operationId": "StripePaymentGatewayService_CreateStripePaymentIntent",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateStripePaymentIntentReply"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CreateStripePaymentIntentRequest"
+            }
+          }
+        ],
+        "tags": [
+          "StripePaymentGatewayService"
+        ]
+      }
+    },
+    "/v1/payment/stripe/webhook": {
+      "post": {
+        "operationId": "StripePaymentGatewayService_StripeWebhook",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1StripeWebhookReply"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "properties": {}
+            }
+          }
+        ],
+        "tags": [
+          "StripePaymentGatewayService"
+        ]
+      }
+    }
+  },
   "definitions": {
+    "gatewayv1PaymentMethod": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "logo": {
+          "type": "string"
+        },
+        "desc": {
+          "type": "string"
+        },
+        "notice": {
+          "type": "string"
+        }
+      }
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -38,6 +164,42 @@
           }
         }
       }
+    },
+    "v1CreateStripePaymentIntentReply": {
+      "type": "object",
+      "properties": {
+        "paymentIntent": {
+          "type": "string"
+        },
+        "ephemeralKey": {
+          "type": "string"
+        },
+        "customerId": {
+          "type": "string"
+        }
+      }
+    },
+    "v1CreateStripePaymentIntentRequest": {
+      "type": "object",
+      "properties": {
+        "orderId": {
+          "type": "string"
+        }
+      }
+    },
+    "v1GetPaymentMethodReply": {
+      "type": "object",
+      "properties": {
+        "methods": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/gatewayv1PaymentMethod"
+          }
+        }
+      }
+    },
+    "v1StripeWebhookReply": {
+      "type": "object"
     }
   }
 }
